--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
   },
   "engines": {
     "npm": ">=7.0.0",
-    "node": ">=18.0.0"
+    "node": "20.x"
   },
   "type": "module",
   "dependencies": {
-    "@evidence-dev/bigquery": "^2.0.8",
-    "@evidence-dev/component-utilities": "^4.0.3",
-    "@evidence-dev/core-components": "^5.0.3",
-    "@evidence-dev/csv": "^1.0.13",
-    "@evidence-dev/evidence": "^40.0.3",
-    "@evidence-dev/motherduck": "^1.0.0",
-    "@evidence-dev/sdk": "^3.0.3",
-    "@evidence-dev/sqlite": "^2.0.6",
-    "@evidence-dev/tailwind": "^3.0.3",
-    "@evidence-dev/trino": "^1.0.8",
-    "@vercel/analytics": "^1.5.0"
+    "@evidence-dev/bigquery": "^2.0.11",
+    "@evidence-dev/component-utilities": "^4.0.11",
+    "@evidence-dev/core-components": "^5.4.0",
+    "@evidence-dev/csv": "^1.0.15",
+    "@evidence-dev/evidence": "^40.1.6",
+    "@evidence-dev/motherduck": "^1.0.5",
+    "@evidence-dev/sdk": "^4.0.0",
+    "@evidence-dev/sqlite": "^2.0.8",
+    "@evidence-dev/tailwind": "^3.1.2",
+    "@vercel/analytics": "^1.6.1"
   },
   "overrides": {
     "jsonwebtoken": "9.0.0",
