--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "my-evidence-project",
+  "name": "evidence-dashboard",
   "version": "0.0.1",
   "scripts": {
     "build": "evidence build",
     "build:strict": "evidence build:strict",
     "dev": "evidence dev --open / --host 0.0.0.0",
+    "vercel:dev": "vercel dev",
     "test": "evidence build",
     "sources": "evidence sources",
     "preview": "evidence preview",
@@ -26,7 +27,9 @@
     "@evidence-dev/sdk": "^4.0.0",
     "@evidence-dev/sqlite": "^2.0.8",
     "@evidence-dev/tailwind": "^3.1.2",
-    "@vercel/analytics": "^1.6.1"
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/edge": "^1.2.2",
+    "vercel": "^49.1.2"
   },
   "overrides": {
     "jsonwebtoken": "9.0.0",
