--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,7 @@ EVIDENCE_SOURCE__free__authenticator=service-account
 # motherduck
 EVIDENCE_SOURCE__pokemon__token=xxxx
 EVIDENCE_SOURCE__pokemon__database=main
+
+# basic auth for vercel middleware
+BASIC_AUTH_USER=admin
+BASIC_AUTH_PASSWORD=admin
